k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    service: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 5000
