k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  labels:
    app: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: "myapp.dev.mycompany.com."
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  rules:
    - host: myapp.dev.mycompany.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp
              servicePort: 80
